[project]
name = "hcode"
version = "0.1.0"
description = "啊齁哦哦哦哦哦♡～"
authors = [
    {name = "Hoshino Ai"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.gscore]
plugin = true
repo = "https://github.com/jiang068/gscore-plugin-hcode"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
